<resources>
    <string name="app_name">스마일바이</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">확 인</string>
    <string name="action_cancel">취 소</string>
    <string name="action_yes">예</string>
    <string name="action_no">아니오</string>
    <string name="facebook_app_id">876098202475445</string>
    <string name="google_analytics_id">UA-76090844-1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_login_with_facebook">페이스북으로 로그인</string>
    <string name="title_activity_terms">서비스 이용약관</string>
    <string name="subtitle_service">서비스 이용약관</string>
    <string name="subtitle_private">개인정보수집 및 이용안내</string>
    <string name="checkbox_agree">동의</string>
    <string name="text_all_agree">서비스 이용약관, 개인정보 수집 및 이용안내에 모두 동의합니다.</string>
    <string name="action_next">다 음</string>
    <string name="title_activity_email_login">로그인</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호 (6-20자 이내)</string>
    <string name="action_find_pw"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="action_sign_in">로그인</string>
    <string name="checkbox_autologin">자동로그인 설정</string>
    <string name="error_invalid_email">이메일 형식이 아닙니다</string>
    <string name="error_invalid_password">비밀번호는 6-20자 이내입니다</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다</string>
    <string name="error_field_required">필수입력 항목입니다</string>
    <string name="permission_rationale">"이메일 자동완성을 위해 연락처를 조회해야 합니다"</string>
    <string name="title_activity_find_pw">비밀번호 찾기</string>
    <string name="title_activity_find_pw_result">비밀번호 발송</string>
    <string name="prompt_email_find_pw">이메일</string>
    <string name="prompt_name_find_pw">이름</string>
    <string name="content_success_find_pw">%s으로\n임시 비밀번호를 발급해 드렸습니다.</string>
    <string name="title_activity_register">회원가입</string>
    <string name="prompt_email_register">이메일</string>
    <string name="prompt_name_register">이름</string>
    <string name="prompt_password_register">비밀번호 (6-20자 이내)</string>
    <string name="prompt_password_reenter_register">비밀번호 재입력 (6-20자 이내)</string>
    <string name="prompt_phone_num">휴대폰번호 (예) 010-1234-5678</string>
    <string name="action_verify_phone">번호인증</string>
    <string name="prompt_secret_num">인증번호 (예) 123456</string>
    <string name="action_check_secret">확인</string>
    <string name="action_register">계정 만들기</string>
    <string name="error_incorrect_phone_num">휴대폰 번호가 잘못 되었습니다</string>
    <string name="error_incorrect_secret_num">인증번호가 잘못 되었습니다</string>
    <string name="error_need_to_check_secret">휴대폰 번호 인증을 해주세요</string>
    <string name="message_verify_phone_complete">%s로\n인증번호가 전송되었습니다</string>
    <string name="message_check_secret_complete">번호 인증이 완료되었습니다</string>
    <string name="prompt_secret_num_timer">남은시간 %s</string>
    <string name="prompt_secret_num_timer_end">시간초과</string>
    <string name="title_car_list">분양차량</string>
    <string name="prompt_search_car">모델명 검색</string>
    <string name="title_car_filter">분양차량</string>
    <string name="action_car_filter_default">기본값</string>
    <string name="action_car_filter_apply">필터적용</string>
    <string name="subtitle_car_filter_sort">정렬선택</string>
    <string name="subtitle_car_filter_price">가격범위</string>
    <string name="subtitle_car_filter_mileage">주행거리</string>
    <string name="action_sort_all">전체</string>
    <string name="action_sort_smilebuy">인증차량</string>
    <string name="action_sort_alliance">제휴차량</string>
    <string name="action_sort_commission">위탁차량</string>
    <string name="action_sort_friend">친구차량</string>
    <string name="text_car_filter_price_unit">가격단위 : 만원</string>
    <string name="text_car_filter_mileage_unit">거리단위 : km</string>
    <string name="balloon_car_filter_price_unit">원</string>
    <string name="balloon_car_filter_price_unit_10000">만원</string>
    <string name="balloon_car_filter_price_unit_10000000">천만원</string>
    <string name="balloon_car_filter_price_unit_100000000">억원</string>
    <string name="balloon_car_filter_mileage_unit">km</string>
    <string name="balloon_car_filter_mileage_unit_10000">만km</string>
    <string name="title_activity_car_detail">차량정보</string>
    <string name="subtitle_interview_section">인터뷰</string>
    <string name="content_request_car_check">* 차량상태 및 시세에 대한 객관적인 평가 및 동행 서비스</string>
    <string name="action_request_smileman">스마일맨 예약</string>
    <string name="action_samsung_insuarance">보 험 료 계 산 하 기</string>
    <string name="action_share">공유하기</string>
    <string name="action_report">신고하기</string>
    <string name="action_send_message">쪽지전송</string>
    <string name="action_call">전화걸기</string>
    <string name="action_sms">문자하기</string>
    <string name="title_activity_comment">댓글 (%d)</string>
    <string name="text_no_comment">현재 댓글이 없습니다.</string>
    <string name="action_send_comment">입력</string>
    <string name="prompt_comment">댓글 입력</string>
    <string name="title_sell_picture">차량 사진 등록</string>
    <string name="title_sell_info">차량 정보 입력</string>
    <string name="title_sell_interview">차에 관한 인터뷰</string>
    <string name="title_sell_complete">정보 입력 완료</string>
    <string name="action_sell_next" formatted="false">다음 (%d/%d)</string>
    <string name="action_sell_complete" formatted="false">완료 (%d/%d)</string>
    <string name="action_sell_dealer">딜러 전환</string>
    <string name="content_sell_picture_guide_1">많은 시간을 함께했던 친구와 작별할 시간입니다</string>
    <string name="content_sell_picture_guide_2">차와 함께한 행복했던 사진을 올려주세요</string>
    <string name="content_sell_picture_guide_3">기쁜 마음으로 당신의 친구를 데려갈 수 있도록 말이에요</string>
    <string name="action_sell_camera">사진촬영</string>
    <string name="action_sell_gallery">사진선택</string>
    <string name="content_sell_info">차에 대한 정보를 간단히 입력해주세요</string>
    <string name="subtitle_sell_compulsory_info">필수정보</string>
    <string name="subtitle_sell_optional_info">선택정보</string>
    <string name="text_sell_request_smilebuy_free">* 차량상태 및 시세에 대한 무료 감정</string>
    <string name="action_sell_request_smilebuy_free">스마일맨 예약 (무료)</string>
    <string name="text_sell_can_smile_buy">구매희망자가 \"스마일맨 예약\"시 수락하시겠습니까?</string>
    <string name="action_sell_info_smile_man"><u>구매희망자의 스마일맨 예약이란?</u></string>
    <string name="text_sell_info_alliance">제휴차량</string>
    <string name="text_sell_info_commission">위탁차량</string>
    <string name="interview_for_manager">스마일맨 코멘트</string>
    <string name="prompt_sell_info_name">차량모델명 및 등급 예)현대 LF쏘나타 2.0CVVL Style Special</string>
    <string name="prompt_sell_info_car_num">차번호&#160;&#160;&#160;&#160;&#160;예) 88가0914</string>
    <string name="prompt_sell_info_phone_num">휴대폰 번호</string>
    <string name="prompt_sell_info_price">희망금액</string>
    <string name="prompt_sell_info_area">지역선택</string>
    <string name="prompt_sell_info_mileage">주행거리</string>
    <string name="prompt_sell_info_age_year">연식&#160;&#160;&#160;&#160;&#160;예) 2015</string>
    <string name="prompt_sell_info_age_month">예) 09</string>
    <string name="prompt_sell_info_fuel">연료선택</string>
    <string name="prompt_sell_info_transmission">변속기 선택</string>
    <string name="prompt_sell_info_engine">배기량</string>
    <string name="prompt_sell_info_additional">차랑 특징 및 강조하고 싶은 내용을 적어주세요.</string>
    <string name="text_sell_info_name">제목</string>
    <string name="text_sell_info_car_num">차번호</string>
    <string name="text_sell_info_phone_num">전화번호</string>
    <string name="text_sell_info_price">희망가격</string>
    <string name="text_sell_info_area">지역</string>
    <string name="text_sell_info_mileage">주행거리</string>
    <string name="text_sell_info_age">연식</string>
    <string name="text_sell_info_fuel">연료</string>
    <string name="text_sell_info_transmission">변속기</string>
    <string name="text_sell_info_engine">배기량</string>
    <string name="text_sell_info_additional">추가정보</string>
    <string name="content_sell_interview">구매자와의 좋은 인연을 위해 차와 관련된 즐거운 추억 및 구매자가 알았으면 하는 정보를 담아주세요.</string>
    <string name="action_add_interview">+ 인터뷰 추가하기</string>
    <string name="prompt_sell_interview">인터뷰 답변을 입력해주세요.</string>
    <string name="alert_delete_interview">인터뷰 내용을 없애시겠습니까?</string>
    <string name="title_add_interview">차에 관한 인터뷰</string>
    <string name="action_self_question">인터뷰 질문 만들기</string>
    <string name="text_self_question">질문내용을 입력해주세요.</string>
    <string name="content_sell_complete">축하드립니다!\n차량 정보 작성이 완료되었습니다.</string>
    <string name="action_sell_confirm">등록</string>
    <string name="action_sell_edit">수정</string>
    <string name="title_activity_smile_buy">차량감정결과</string>
    <string name="title_caffein_result">프리미엄진단 결과</string>
    <string name="text_sell_info_manager">작성자 정보</string>
    <string name="text_sell_info_model_name">모델</string>
    <string name="text_sell_info_default">기본정보</string>
    <string name="text_sell_info_checkbox">상세정보</string>
    <string name="text_sell_info_sunroof">선루프</string>
    <string name="text_sell_info_navigation">네비게이션</string>
    <string name="text_sell_info_smart_key">스마트키</string>
    <string name="text_sell_info_black_box">블랙박스</string>
    <string name="text_sell_info_rear_camera">후방카메라</string>
    <string name="text_sell_info_manager_comment">스마일맨 코멘트</string>
    <string name="text_sell_info_caffein">프리미엄진단</string>
    <string name="text_sell_info_accident">사고유무</string>
    <string name="text_sell_info_predicted_price">차량예상가격</string>
    <string name="action_show_caffein">프리미엄진단 확인</string>
    <string name="content_sell_smile_buy_info">차에 대한 정보를 정확하고 자세하게 입력해주세요.</string>
    <string name="prompt_sell_info_model_name">모델명 및 상세 트림</string>
    <string name="prompt_sell_info_manager_name">담당자 성함을 적어주세요</string>
    <string name="prompt_sell_info_manager_comment">센스있는 코멘트 부탁드립니다.</string>
    <string name="radio_button_exist">유</string>
    <string name="radio_button_not_exist">무</string>
    <string name="action_manager_upload">감정내용 올리기</string>
    <string name="prompt_target_car_id">감정차량 아이디 입력</string>
    <string name="action_request_target_car">조회</string>
    <string name="text_target_car_info" formatted="false">감정차량 아이디 : %d\n제목 : %s\n고객 : %s</string>
    <string name="text_sell_info_manager_info" formatted="false">스마일맨 : %s&#160;&#160;연락처 : %s</string>
    <string name="text_target_car_no_exist">감정차량이 없습니다. 아이디를 다시 입력해주세요.</string>
    <string name="text_upload_smilebuy_rule">
        [차량감정 유의사항]\n
        1. 항상 \"감정차량 아이디\"를 먼저 조회해 주세요.\n
        2. 차량 확인 시 이상 있는 부분은 클로즈업해서 올려주세요.\n
        3. 스마일맨 코멘트는 차량의 장점과 구매자가 알아야 될 내용으로\n 구분하여 친절하게 작성해주세요. (중요!)
    </string>
    <string name="text_smilebuy_result_title">스마일맨 확인 내용</string>
    <string name="text_smilebuy_result_name">모&#160;델&#160;명:</string>
    <string name="text_smilebuy_result_age">연&#160;&#160;&#160;&#160;식:</string>
    <string name="text_smilebuy_result_mileage">주행거리:</string>
    <string name="text_smilebuy_result_fuel">연&#160;&#160;&#160;&#160;료:</string>
    <string name="text_smilebuy_result_transmission">변&#160;속&#160;기:</string>
    <string name="text_smilebuy_result_engine">배&#160;기&#160;량:</string>
    <string name="text_smilebuy_result_car_num">차량번호:</string>
    <string name="title_what_is_smileman">구매희망자의 스마일맨 예약이란?</string>
    <string name="subtitle_what_is_smileman">스마일맨 동행 서비스</string>
    <string name="text_what_is_smileman">
        스마일맨 예약을 허용하시면 구매희망자가 등록차량에 대해 스마일맨 동행 서비스를 신청할 수 있습니다.\n\n
        예약이 완료되면 스마일맨이 차량을 보여주실 수 있는 날짜로 약속을 잡고, 구매희망자와 동행하여 거래 과정에 도움을 드립니다.
    </string>
    <string name="text_account_type">로그인 정보 :</string>
    <string name="text_account_type_facebook">페이스북으로 로그인</string>
    <string name="title_change_pwd">비밀번호 변경하기</string>
    <string name="prompt_change_pwd_current">기존 비밀번호 입력</string>
    <string name="popup_camera_title">작업선택</string>
    <string name="popup_camera_upload">사진 올리기</string>
    <string name="popup_camera_delete">삭 제</string>
    <string name="popup_camera_cancel">취 소</string>
</resources>