<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.autofactory.smilebuy.ui.login.RegisterActivity"
    tools:ignore="MissingPrefix">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_h"
        android:background="@drawable/top_bar">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/top_bar_button_h"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/button_trans"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_top_before"/>

        <TextView
            fontPath="fonts/NotoBold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_register"
            android:textColor="@color/text_ff"
            android:textSize="@dimen/text_72"/>
    </FrameLayout>

    <EditText
        android:id="@+id/name"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_name"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_name_register"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="12"
        android:maxLines="1"
        android:nextFocusDown="@+id/email"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <EditText
        android:id="@+id/email"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_mail"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_email_register"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:nextFocusDown="@+id/password"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <EditText
        android:id="@+id/password"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_pw"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_password_register"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:nextFocusDown="@+id/passwordReenter"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <EditText
        android:id="@+id/passwordReenter"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_pw"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_password_reenter_register"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:nextFocusDown="@+id/phoneNum"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/phoneNum"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_h"
            android:background="@drawable/gray_textbox"
            android:gravity="center_vertical|left"
            android:hint="@string/prompt_phone_num"
            android:inputType="phone"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/text_66"
            android:textColorHint="@color/text_a2"
            android:textSize="@dimen/text_50"/>

        <Button
            android:id="@+id/verifyPhone"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_yellow"
            android:includeFontPadding="false"
            android:text="@string/action_verify_phone"
            android:textAlignment="center"
            android:textColor="@color/text_ff"
            android:textSize="@dimen/text_50"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/checkSecretWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/secretNum"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_h"
            android:background="@drawable/gray_textbox"
            android:gravity="center_vertical|left"
            android:hint="@string/prompt_secret_num"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/text_66"
            android:textColorHint="@color/text_a2"
            android:textSize="@dimen/text_50"/>

        <Button
            android:id="@+id/checkSecret"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_yellow"
            android:includeFontPadding="false"
            android:text="@string/action_check_secret"
            android:textColor="@color/text_ff"
            android:textSize="@dimen/text_50" />

        <TextView
            android:id="@+id/secretTimer"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="120dp"
            android:gravity="center_vertical|right"
            android:text="@string/prompt_secret_num_timer"
            android:textColor="@color/text_fb"
            android:textSize="@dimen/text_45"/>
    </FrameLayout>

    <Button
        android:id="@+id/register"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_h"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_red"
        android:includeFontPadding="false"
        android:text="@string/action_register"
        android:textColor="@color/text_ff"
        android:textSize="@dimen/text_50"/>


</LinearLayout>
