<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/back_ff"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.autofactory.smilebuy.ui.login.EmailLoginActivity"
              tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_h"
        android:background="@drawable/top_bar">

        <TextView
            fontPath="fonts/NotoBold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_email_login"
            android:textColor="@color/text_ff"
            android:textSize="@dimen/text_72"/>
    </FrameLayout>

    <EditText
        android:id="@+id/email"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_mail"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/password"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <EditText
        android:id="@+id/password"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/gray_textbox"
        android:drawableRight="@drawable/icon_pw"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <Button
        android:id="@+id/login"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_h"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_yellow"
        android:includeFontPadding="false"
        android:text="@string/action_sign_in"
        android:textColor="@color/text_ff"
        android:textSize="@dimen/text_50"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            fontPath="fonts/NotoBold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_autologin"
            android:textColor="@color/text_a2"
            android:textSize="@dimen/text_50"/>

        <CheckBox
            android:id="@+id/agreeAutologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/checkbox_default"/>
    </LinearLayout>

    <TextView
        android:id="@+id/findPw"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:text="@string/action_find_pw"
        android:textColor="@color/text_a2"
        android:textSize="@dimen/text_50"/>
</LinearLayout>
