<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_e5"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_h"
        android:layout_marginBottom="18dp"
        android:background="@drawable/top_bar">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/top_bar_button_h"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/button_trans"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_top_before"/>

        <TextView
            android:id="@+id/title"
            fontPath="fonts/NotoBold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_change_pwd"
            android:textColor="@color/text_ff"
            android:textSize="@dimen/text_72"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/white_textbox">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_h"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                fontPath="fonts/NotoBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_gravity="center_vertical"
                android:text="@string/text_account_type"
                android:textColor="@color/text_a2"
                android:textSize="@dimen/text_50"/>

            <TextView
                android:id="@+id/accountType"
                fontPath="fonts/NotoBold.otf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/text_account_type_facebook"
                android:textColor="@color/text_66"
                android:textSize="@dimen/text_50"/>


        </LinearLayout>
    </FrameLayout>

    <EditText
        android:id="@+id/password"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_h"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/white_textbox"
        android:drawableRight="@drawable/icon_pw"
        android:gravity="center_vertical|left"
        android:hint="@string/prompt_change_pwd_current"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusDown="@+id/passwordReenter"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/text_66"
        android:textColorHint="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <TextView
        android:id="@+id/findPw"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:text="@string/action_find_pw"
        android:textColor="@color/text_a2"
        android:textSize="@dimen/text_50"/>

    <Button
        android:id="@+id/next"
        fontPath="fonts/NotoBold.otf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_h"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_yellow"
        android:includeFontPadding="false"
        android:text="@string/action_next"
        android:textColor="@color/text_ff"
        android:textSize="@dimen/text_50"/>

</LinearLayout>
